--- a/faq-accordion-card/index.html
+++ b/faq-accordion-card/index.html
@@ -23,26 +23,51 @@
   <body>
     <div class="container">
       <section class="faq">
-        <div class="faq-content  grid-container">
+        <div class="faq-content grid-container">
           <div class="title">
             <h1>Faq</h1>
           </div>
 
           <dl class="questions">
             <dt>How many team members can I invite?</dt>
-            <dd>primeiro - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae minus esse ipsa autem id numquam amet voluptate et distinctio cupiditate nemo odit, quisquam doloribus tenetur exercitationem modi voluptatum maiores ex.</dd>
+            <dd>
+              primeiro - Lorem, ipsum dolor sit amet consectetur adipisicing
+              elit. Recusandae minus esse ipsa autem id numquam amet voluptate
+              et distinctio cupiditate nemo odit, quisquam doloribus tenetur
+              exercitationem modi voluptatum maiores ex.
+            </dd>
 
-            <dt>What is the maximum file upload size?</dt>
-            <dd class="display-block">segundo - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae minus esse ipsa autem id numquam amet voluptate et distinctio cupiditate nemo odit, quisquam doloribus tenetur exercitationem modi voluptatum maiores ex.</dd>
+            <dt class="active">What is the maximum file upload size?</dt>
+            <dd class="display-block">
+              segundo - Lorem, ipsum dolor sit amet consectetur adipisicing
+              elit. Recusandae minus esse ipsa autem id numquam amet voluptate
+              et distinctio cupiditate nemo odit, quisquam doloribus tenetur
+              exercitationem modi voluptatum maiores ex.
+            </dd>
 
             <dt>How do I reset my password?</dt>
-            <dd>terceiro - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae minus esse ipsa autem id numquam amet voluptate et distinctio cupiditate nemo odit, quisquam doloribus tenetur exercitationem modi voluptatum maiores ex.</dd>
+            <dd>
+              terceiro - Lorem, ipsum dolor sit amet consectetur adipisicing
+              elit. Recusandae minus esse ipsa autem id numquam amet voluptate
+              et distinctio cupiditate nemo odit, quisquam doloribus tenetur
+              exercitationem modi voluptatum maiores ex.
+            </dd>
 
             <dt>Can I cancel my subscription?</dt>
-            <dd>quarto - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae minus esse ipsa autem id numquam amet voluptate et distinctio cupiditate nemo odit, quisquam doloribus tenetur exercitationem modi voluptatum maiores ex.</dd>
+            <dd>
+              quarto - Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae minus esse ipsa autem id numquam amet voluptate et
+              distinctio cupiditate nemo odit, quisquam doloribus tenetur
+              exercitationem modi voluptatum maiores ex.
+            </dd>
 
             <dt>Do you provide addicional support?</dt>
-            <dd>quinto - Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae minus esse ipsa autem id numquam amet voluptate et distinctio cupiditate nemo odit, quisquam doloribus tenetur exercitationem modi voluptatum maiores ex.</dd>
+            <dd>
+              quinto - Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae minus esse ipsa autem id numquam amet voluptate et
+              distinctio cupiditate nemo odit, quisquam doloribus tenetur
+              exercitationem modi voluptatum maiores ex.
+            </dd>
           </dl>
         </div>
       </section>
