--- a/base-apparel-coming-soon-page/index.html
+++ b/base-apparel-coming-soon-page/index.html
@@ -15,5 +15,34 @@
 
     <link rel="stylesheet" href="./style/style.css" />
   </head>
-  <body></body>
+  <body>
+    <main class="container">
+      <header class="content-container">
+        <div class="logo">
+          <img
+            src="./base-apparel-coming-soon-master/base-apparel-coming-soon-master/images/logo.svg"
+            alt="Frontend Image"
+          />
+        </div>
+      </header>
+
+      <section class="content content-container">
+        <h1 class="title">We're Coming Soon</h1>
+        <p class="paragraph">
+          Hello fellow shoppers! We're currently building our new fashion store.
+          Add your email below to stay up-to-date with announcements and our
+          launch deals.
+        </p>
+        <input type="email" name="email" id="email">
+        <button type="submit" name=""></button>
+      </section>
+
+      <div class="image">
+        <img
+          src="https://images.unsplash.com/photo-1663056314725-c024ec8d5185?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHx0b3BpYy1mZWVkfDExNnx0b3dKWkZza3BHZ3x8ZW58MHx8fHw%3D&auto=format&fit=crop&w=500&q=60"
+          alt="Unsplash Random Image"
+        />
+      </div>
+    </main>
+  </body>
 </html>
