html and css almost done

--- a/base-apparel-coming-soon-page/index.html
+++ b/base-apparel-coming-soon-page/index.html
@@ -27,14 +27,23 @@
       </header>
 
       <section class="content content-container">
-        <h1 class="title">We're Coming Soon</h1>
-        <p class="paragraph">
-          Hello fellow shoppers! We're currently building our new fashion store.
-          Add your email below to stay up-to-date with announcements and our
-          launch deals.
-        </p>
-        <input type="email" name="email" id="email">
-        <button type="submit" name=""></button>
+        <div class="text">
+          <h1 class="title">
+            <span class="detail">We're</span> <br />
+            Coming <br />
+            Soon
+          </h1>
+          <p class="paragraph">
+            Hello fellow shoppers! We're currently building our new fashion
+            store. Add your email below to stay up-to-date with announcements
+            and our launch deals.
+          </p>
+        </div>
+
+        <div class="button">
+          <input type="email" name="email" id="email" placeholder="Email Address"/>
+          <button type="submit" name="email" id="email">></button>
+        </div>
       </section>
 
       <div class="image">
